add packaging automation for mac, win and linux