@@ -1,22 +1,35 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.dlraudio</groupId>
-  <artifactId>dbPlotter</artifactId>
+  <artifactId>dBPlotter</artifactId>
   <version>1.0.0</version>
   <name>dB Plotter</name>
+  <packaging>jar</packaging>
 
   <properties>
-    <appModule>com.dlraudio.dbplotter</appModule>
-    <appMainClass>com.dlraudio.dbplotter.MainApp</appMainClass>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>23</maven.compiler.release>
+    <client.version>1.0.0</client.version>
+    <exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
+    <javafx.version>23.0.2</javafx.version>
   </properties>
 
   <dependencies>
+    <!-- JavaFX Modules -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+
     <!-- Communication Série (Arduino) -->
     <dependency>
       <groupId>com.fazecast</groupId>
@@ -24,22 +37,20 @@
       <version>2.9.3</version>
     </dependency>
 
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-controls</artifactId>
-        <version>23.0.2</version>
-      </dependency>
-
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-fxml</artifactId>
-      <version>23.0.2</version>
-    </dependency>
-
   </dependencies>
 
   <build>
     <plugins>
+
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
+        <configuration>
+          <mainClass>com.dlraudio.dbplotter.MainApp</mainClass>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -47,68 +58,133 @@
         <configuration>
           <source>23</source>
           <target>23</target>
-          <outputDirectory>${project.build.directory}/mods</outputDirectory>
         </configuration>
       </plugin>
 
       <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.8</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.4.0</version>
         <executions>
           <execution>
-            <id>default-cli</id>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
             <configuration>
-              <mainClass>com.dlraudio.dbplotter.MainApp</mainClass>
-              <launcher>app</launcher>
-              <jlinkZipName>app</jlinkZipName>
-              <jlinkImageName>app</jlinkImageName>
-              <noManPages>true</noManPages>
-              <stripDebug>true</stripDebug>
-              <noHeaderFiles>true</noHeaderFiles>
+              <outputDirectory>${project.build.directory}/libs</outputDirectory>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>false</overWriteSnapshots>
+              <overWriteIfNewer>true</overWriteIfNewer>
+              <includeScope>compile</includeScope>
+              <includeScope>runtime</includeScope>
             </configuration>
           </execution>
         </executions>
       </plugin>
-
-      <plugin>
-        <groupId>org.panteleyev</groupId>
-        <artifactId>jpackage-maven-plugin</artifactId>
-        <version>1.6.4</version>
-
-        <configuration>
-          <name>dBPlotter</name>
-          <appVersion>${project.version}</appVersion>
-          <vendor>DLR Audio</vendor>
-          <runtimeImage>${java.home}</runtimeImage>
-          <module>${appModule}/${appMainClass}</module>
-          <modulePaths>
-            <modulePath>${project.build.directory}/mods</modulePath>
-          </modulePaths>
-          <destination>target/dist</destination>
-          <javaOptions>
-            <option>--enable-preview</option>
-            <option>-Dfile.encoding=UTF-8</option>
-          </javaOptions>
-        </configuration>
-
-        <executions>
-          <execution>
-            <id>mac</id>
-            <configuration>
-              <icon>src/main/resources/com/dlraudio/ui/images/icon.icns</icon>
-            </configuration>
-          </execution>
-          <execution>
-            <id>win</id>
-            <configuration>
-              <icon>src/main/resources/com/dlraudio/ui/images/icon.ico</icon>
-              <winMenu>true</winMenu>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
     </plugins>
+
   </build>
+
+      <profiles>
+        <profile>
+          <id>build-mac</id>
+          <activation>
+            <os><family>mac</family></os>
+          </activation>
+          <build>
+            <plugins>
+              <plugin>
+                <artifactId>exec-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <version>${exec.maven.plugin.version}</version>
+                <executions>
+                  <execution>
+                    <id>Build Native Mac App</id>
+                    <phase>install</phase>
+                    <goals>
+                      <goal>exec</goal>
+                    </goals>
+                  </execution>
+                </executions>
+                <configuration>
+                  <workingDirectory>${project.basedir}</workingDirectory>
+                  <executable>./build-mac.sh</executable>
+                  <environmentVariables>
+                    <APP_VERSION>${client.version}</APP_VERSION>
+                    <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </plugin>
+            </plugins>
+          </build>
+        </profile>
+
+        <profile>
+          <id>build-linux</id>
+          <activation>
+            <os><family>linux</family></os>
+          </activation>
+          <build>
+            <plugins>
+              <plugin>
+                <artifactId>exec-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <version>${exec.maven.plugin.version}</version>
+                <executions>
+                  <execution>
+                    <id>Build Native Linux App</id>
+                    <phase>install</phase>
+                    <goals>
+                      <goal>exec</goal>
+                    </goals>
+                  </execution>
+                </executions>
+                <configuration>
+                  <workingDirectory>${project.basedir}</workingDirectory>
+                  <executable>./build-linux.sh</executable>
+                  <environmentVariables>
+                    <APP_VERSION>${client.version}</APP_VERSION>
+                    <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </plugin>
+            </plugins>
+          </build>
+        </profile>
+
+        <profile>
+          <id>build-windows</id>
+          <activation>
+            <os><family>windows</family></os>
+          </activation>
+          <build>
+            <plugins>
+              <plugin>
+                <artifactId>exec-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <version>${exec.maven.plugin.version}</version>
+                <executions>
+                  <execution>
+                    <id>Build Native Windows App</id>
+                    <phase>install</phase>
+                    <goals>
+                      <goal>exec</goal>
+                    </goals>
+                  </execution>
+                </executions>
+                <configuration>
+                  <workingDirectory>${project.basedir}</workingDirectory>
+                  <executable>build-windows.bat</executable>
+                  <environmentVariables>
+                    <APP_VERSION>${client.version}</APP_VERSION>
+                    <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </plugin>
+            </plugins>
+          </build>
+        </profile>
+      </profiles>
 </project>
